<resources>
    <string name="app_name">PetShop</string>
    <string name="escolha_qual_cachorro_deseja">Escolha qual cachorro deseja:</string>
    <string name="border_collie">Border Collie R$800,00</string>
    <string name="pit_bull">Pit Bull R$750,00</string>
    <string name="pastor_alemao">Pastor Alemão R$700,00</string>
    <string name="pastor_canadense">Pastor Canadense R$800,00</string>
    <string name="femea">Fêmea</string>
    <string name="adestrado">Adestrado</string>
    <string name="vacinas_em_dia">Com todas as vacinas em dia</string>
    <string name="calcular">CALCULAR</string>
</resources>
